src/main/java/com/example/demo/error/exception/PostNotFoundException.java
package com.example.demo.error.exception;

public class PostNotFoundException extends RuntimeException{
    public PostNotFoundException(String message) {
        super(message);
    }
}